--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body {
+    background-color: #f8f9fa;
+}
+
 section {
     width: 100vw;
     height: 80vh;
@@ -60,7 +64,6 @@ section {
     flex-direction: column;
     justify-content: center;
 }
-
 
 .extra {
     background: #23CDFD;
@@ -171,12 +174,132 @@ section.extra iframe {
     border-radius: 5px;
 }
 
+.logo {
+    width: 50px;
+    height: 50px;
+}
 
-@media (max-width: 767px) {
+@media only screen and (max-width: 768px) {
     .history {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+    }
+    
+    .history img {
+        display: none;
+    }
+
+    .how-history {
+        width: 80%;
+    }
+
+    .how-history h1 {
+        font-size: 3em;
+    }
+
+    .how-history p {
+        font-size: 0.6em;
+    }
+
+    .about {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        overflow: scroll;
+    }
+    
+    .about img {
+        display: none;
+    }
+    
+    .about-history {
+        width: 80%;
+        padding: 0;
+        margin-top: 40px;
+    }
+
+    .about-history h1 {
+        font-size: 3em;
+    }
+
+    .about-history p {
+        font-size: 0.6em;
+    }
+
+    section {
+        width: 100vw;
+        height: 80vh;
+    }
+
+    p {
+        font-size: 15px;
+    }
+    
+    .carousel-item {
+        height: 80vh;
+    } 
+    .carousel-item img{
+        height: 80vh;
+        object-fit: cover;
+    }
+
+    .form {
+        margin-top: 40px;
+    }
+
+    .form input, label {
+        font-size: 0.7em;
+    }
+
+    .form small, textarea {
+        font-size: 0.5em;
+    }
+
+    .form button {
+        width: 100%;
+        font-size: 0.5em;
+    }
+
+    section.extra {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .twitter {
+        background: #f8f9fa;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .twitter-embbed {
+        width: 100%;
+        height: 100%;
+        overflow: scroll;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .total {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    section.extra iframe {
+        position: relative;
+        width: 80%;
+        height: 80%;
     }
 }
